Allow filters to specify their initial visual rect.

BUG=637056
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2239913002
Cr-Commit-Position: refs/heads/master@{#411516}

Former-commit-id: 8062fe31e77b286dfcf0f32127bb5e591449d11f